--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.7",
+    "@types/react-router-dom": "^5.1.7",
     "icomoon-react": "^2.0.19",
     "node-sass": "4.14.1",
     "react": "^17.0.1",
